# AutoMIA

./: .gitignore  README.md
agent_mia/: OPENROUTER_SETUP.md  __init__.py  config_deepseek.yaml  config_openrouter.yaml  metrics_plugin.py
agent_mia/agent/: __init__.py  auc.txt  base_agent.py  config_loader.py  prompt cn.py  prompt.py  run.py
llava/: README.md  pyproject.toml  requirements.txt  run_with_img_agent.py  run_with_text_agent.py  setup.py
